--- a/lab3/multimedia.css
+++ b/lab3/multimedia.css
@@ -63,6 +63,7 @@ section {
 
 #Fotografias {
     background-color: #f5f5f5;
+    min-height: 100vh;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 15px;
@@ -72,7 +73,6 @@ section {
 
 #Fotografias img {
     width: 100%;
-    max-width: 400px;
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
     cursor: zoom-in;
